--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@mui/material": "^6.4.8",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^12.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
