--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.6.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "next": "15.2.3",
+    "path": "^0.12.7",
+    "qr-code-styling": "^1.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "three": "^0.174.0"
   },
   "devDependencies": {
